<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".HomeActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@color/purple_200"
            android:contentDescription="@string/about_page"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#67A8EF"
            android:text="@string/click"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/checkbox_laptop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laptop"/>

        <CheckBox
            android:id="@+id/checkbox_charger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charger"/>

        <CheckBox
            android:id="@+id/checkbox_cable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cable"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"/>

            <RadioButton
                android:id="@+id/radio_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"/>

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"/>
        </RadioGroup>

        <Switch
            android:id="@+id/switch_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:ems="15"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:backgroundTint="#67A8EF"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>
